...
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <EditText
                android:id="@+id/addNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@android:string/untitled"
...

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_add_note" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorPrimaryDark"
        app:maxImageSize="30dp"
...
